[CHANGE] badge-pill styles

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,10 +15,11 @@
 
 .badge-pill {
   display: inline-block !important;
-  padding: 0.3rem 0.5rem !important;
+  // padding: 0.3rem 0.5rem !important;
+  padding: 0.2rem 0.6rem !important;
   border-radius: 10rem !important;
   font-size: 85% !important;
-  font-weight: 600 !important;
+  // font-weight: 600 !important;
   text-align: center !important;
   white-space: nowrap !important;
   vertical-align: baseline !important;
