--- a/src/app/layout/components/navbar/navbar.component.html
+++ b/src/app/layout/components/navbar/navbar.component.html
@@ -19,13 +19,16 @@
     <ul class="nav navbar-nav d-xl-none" *ngIf="!coreConfig.layout.menu.hidden">
       <li class="nav-item">
         <a class="nav-link menu-toggle" (click)="toggleSidebar('menu')">
-          <span [data-feather]="'menu'" [class]="'ficon'"></span>
+          <kep-icon name="element-11" type="duotone" class="font-large-1"></kep-icon>
         </a>
       </li>
       <li class="nav-item d-lg-none d-md-block d-sm-block">
         <a type="button" class="nav-link nav-link-style btn" (click)="toggleDarkSkin()">
-          <span *ngIf="currentSkin == 'dark'"><i class="font-medium-5" data-feather="sun"></i></span>
-          <span *ngIf="currentSkin != 'dark'"><i class="font-medium-5" data-feather="moon"></i></span>
+          @if (currentSkin == 'dark'){
+            <kep-icon name="sun" type="duotone" class="font-large-1"></kep-icon>
+          } @else {
+            <kep-icon name="moon" type="duotone" class="font-large-1"></kep-icon>
+          }
         </a>
       </li>  
     </ul>
@@ -34,8 +37,11 @@
     <!-- Toggle skin -->
     <li class="nav-item d-none d-lg-block">
       <a type="button" class="nav-link nav-link-style btn" (click)="toggleDarkSkin()">
-        <span *ngIf="currentSkin == 'dark'"><i class="font-medium-5" data-feather="sun"></i></span>
-        <span *ngIf="currentSkin != 'dark'"><i class="font-medium-5" data-feather="moon"></i></span>
+        @if (currentSkin == 'dark'){
+          <kep-icon name="sun" type="duotone" class="font-large-1"></kep-icon>
+        } @else {
+          <kep-icon name="moon" type="duotone" class="font-large-1"></kep-icon>
+        }
       </a>
     </li>
     <!--/ Toggle skin -->
@@ -44,7 +50,7 @@
     <li ngbDropdown class="nav-item dropdown dropdown-language">
       <a class="nav-link dropdown-toggle" id="dropdown-flag" ngbDropdownToggle>
         <i class="fi fi-{{ languageOptions[_translateService.currentLang].flag }}"></i>
-        <span class="ml-50 selected-language">{{ languageOptions[_translateService.currentLang].title }}</span>
+<!--        <span class="ml-50 selected-language">{{ languageOptions[_translateService.currentLang].title }}</span>-->
       </a>
       <div ngbDropdownMenu aria-labelledby="dropdown-flag">
         <a *ngFor="let lang of _translateService.getLangs()" ngbDropdownItem (click)="setLanguage(lang)">
