--- a/src/app/modules/contests/pages/contest/contest-tab/contest-tab.component.html
+++ b/src/app/modules/contests/pages/contest/contest-tab/contest-tab.component.html
@@ -3,42 +3,56 @@
     <li ngbNavItem>
       <a ngbNavLink [routerLink]="['/competitions', 'contests', 'contest', contest?.id]"
         [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">
-        <span [data-feather]="'contest' | iconName"></span> {{ 'CONTESTS.CONTEST' | translate }}</a>
+        <kep-icon name="contest"></kep-icon>
+        {{ 'CONTESTS.CONTEST' | translate }}</a>
+      <ng-template ngbNavContent>
+      </ng-template>
+    </li>
+    <li ngbNavItem *ngIf="contest?.status == -1">
+      <a ngbNavLink [routerLink]="['/competitions', 'contests', 'contest', contest?.id, 'registrants']"
+        [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">
+        <kep-icon name="users"></kep-icon>
+        {{ 'Registrants' | translate }}</a>
       <ng-template ngbNavContent>
       </ng-template>
     </li>
     <li ngbNavItem *ngIf="contest?.status != -1">
       <a ngbNavLink [routerLink]="['/competitions', 'contests', 'contest', contest?.id, 'problems']"
         routerLinkActive="active">
-        <span [data-feather]="'problem' | iconName"></span> {{ 'Problems' | translate }}</a>
+        <kep-icon name="problem"></kep-icon>
+        {{ 'Problems' | translate }}</a>
       <ng-template ngbNavContent>
       </ng-template>
     </li>
     <li ngbNavItem *ngIf="contest?.status != -1">
       <a ngbNavLink [routerLink]="['/competitions', 'contests', 'contest', contest?.id, 'attempts']"
         routerLinkActive="active">
-        <span [data-feather]="'attempt' | iconName"></span> {{ 'Attempts' | translate }}</a>
+        <kep-icon name="attempt"></kep-icon>
+        {{ 'Attempts' | translate }}</a>
       <ng-template ngbNavContent>
       </ng-template>
     </li>
     <li ngbNavItem *ngIf="contest?.status != -1">
       <a ngbNavLink [routerLink]="['/competitions', 'contests', 'contest', contest?.id, 'standings']"
         routerLinkActive="active">
-        <span [data-feather]="'rating' | iconName"></span> {{ 'CONTESTS.STANDINGS' | translate }}</a>
+        <kep-icon name="ranking"></kep-icon>
+        {{ 'CONTESTS.STANDINGS' | translate }}</a>
       <ng-template ngbNavContent>
       </ng-template>
     </li>
     <li ngbNavItem *ngIf="contest?.status == 1 && contest?.isRated">
       <a ngbNavLink [routerLink]="['/competitions', 'contests', 'contest', contest?.id, 'rating-changes']"
         routerLinkActive="active">
-        <span [data-feather]="'trending-up'"></span> {{ 'CONTESTS.RATING_CHANGES' | translate }}</a>
+        <kep-icon name="rating-changes"></kep-icon>
+        {{ 'CONTESTS.RATING_CHANGES' | translate }}</a>
       <ng-template ngbNavContent>
       </ng-template>
     </li>
     <li ngbNavItem *ngIf="contest?.status != -1">
       <a ngbNavLink [routerLink]="['/competitions', 'contests', 'contest', contest?.id, 'questions']"
         routerLinkActive="active">
-        <span [data-feather]="'help-circle'"></span> {{ 'Questions' | translate }}</a>
+        <kep-icon name="question"></kep-icon>
+        {{ 'Questions' | translate }}</a>
       <ng-template ngbNavContent>
       </ng-template>
     </li>
