[ADD] code-golf to problem-info-card

--- a/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
+++ b/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
@@ -75,6 +75,7 @@
 
             <div class="card-body">
               <problem-info-card
+                [hideCodeGolf]="false"
                 [hideAuthorAndDifficulty]="true"
                 [hideLikes]="true"
                 [problem]="contestProblem?.problem">
