--- a/src/app/layout/components/footer/footer.component.html
+++ b/src/app/layout/components/footer/footer.component.html
@@ -14,7 +14,7 @@
   </div>
   <div class="row">
       <div class="col-lg-12">
-          <p class="copyright">Copyright © 2023 CPython.uz</p>
+          <p class="copyright">Copyright © 2023 KEP.uz</p>
       </div>
   </div>
 </div>
