--- a/src/app/modules/contests/pages/contest/contest-og-image/contest-og-image.component.html
+++ b/src/app/modules/contests/pages/contest/contest-og-image/contest-og-image.component.html
@@ -3,7 +3,7 @@
     <a class="card-header">
       <div class="logo text-left d-flex">
         <img src="assets/images/logo/logo.png" height="32" alt="">
-        <h5 class="ml-75 text-white mt-50 mb-2">CPython.uz</h5>
+        <h5 class="ml-75 text-white mt-50 mb-2">KEP.uz</h5>
       </div>
 
       <img src="assets/images/pages/500.png" height="150" alt="">
