--- a/src/app/modules/pages/authentication/auth-login-v2/auth-login-v2.component.html
+++ b/src/app/modules/pages/authentication/auth-login-v2/auth-login-v2.component.html
@@ -23,7 +23,7 @@
     <!-- Login-->
     <div class="d-flex col-lg-4 align-items-center auth-bg px-2 p-lg-5">
       <div class="col-12 col-sm-8 col-md-6 col-lg-12 px-xl-2 mx-auto">
-        <h2 class="card-title font-weight-bold mb-1">{{ 'WelcomeToCPython' | translate }}! 👋</h2>
+        <h2 class="card-title font-weight-bold mb-1">{{ 'WelcomeToKEP' | translate }}! 👋</h2>
         <p class="card-text mb-2">{{ 'LoginText' | translate }}</p>
 
         <ngb-alert [type]="'danger'" [dismissible]="false" *ngIf="error">
@@ -96,8 +96,8 @@
           <div class="divider-text">{{ 'or' | translate }}</div>
         </div>
         <div class="auth-footer-btn d-flex justify-content-center">
-          <a class="btn btn-google" style="margin-right: 1rem;" href="https://cpython.uz/login/google-oauth2/?next=/home"><i data-feather="mail"></i></a>
-          <a class="btn btn-github" href="https://cpython.uz/login/github/?next=/home"><i data-feather="github"></i></a>
+          <a class="btn btn-google" style="margin-right: 1rem;" href="/login/google-oauth2/?next=/home"><i data-feather="mail"></i></a>
+          <a class="btn btn-github" href="/login/github/?next=/home"><i data-feather="github"></i></a>
         </div>
       </div>
     </div>
