--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -63,14 +63,14 @@ code {
 
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  box-shadow: inset 0 0 6px #8070d4;
+  box-shadow: inset 0 0 6px $primary;
   background-color: #D62929;
 }
 
 ::-webkit-scrollbar-thumb {
   border: 5px solid transparent;
   border-radius: 100px;
-  background-color: #8070d4;
+  background-color: $primary;
   background-clip: content-box;
 }
 
@@ -112,8 +112,8 @@ pre {
 }
 
 ::selection {
-  color: rgb(115, 103, 240, 0.8);
-  background: rgb(115, 103, 240, 0.1);
+  color: $primary;
+  background: rgba($primary, 0.1);
 }
 
 .dark-layout .badge.badge-light-dark {
@@ -135,8 +135,13 @@ pre {
 }
 
 .tooltip-primary .tooltip-inner {
-  color: $primary;
-  background-color: rgba($primary, 0.1);
+  color: white;
+  background-color: mix(white, $primary, 20);
+}
+
+.dark-layout .tooltip-primary .tooltip-inner {
+  color: white !important;
+  background-color: mix(black, $primary, 20) !important;
 }
 
 .tooltip-success .tooltip-inner {
