[CHANGE] dark-color variables globally & some keenicon refactoring

--- a/src/app/layout/components/navbar/navbar-daily-tasks/navbar-daily-tasks.component.scss
+++ b/src/app/layout/components/navbar/navbar-daily-tasks/navbar-daily-tasks.component.scss
@@ -46,5 +46,5 @@ a {
 }
 
 ::ng-deep .dark-layout .media {
-  border-bottom: 1px solid #3b4253 !important;
+  border-bottom: 1px solid #202125 !important;
 }
