--- a/src/app/modules/blog/components/blog-post-card/news-card/news-card.component.scss
+++ b/src/app/modules/blog/components/blog-post-card/news-card/news-card.component.scss
@@ -50,7 +50,7 @@
 ::ng-deep .dark-layout .news-card {
   .post-image {
     img {
-      background: #283046 !important;
+      background: #15171c !important;
     }
   }
 }
