--- a/src/app/modules/contests/pages/contests/contests.component.html
+++ b/src/app/modules/contests/pages/contests/contests.component.html
@@ -6,7 +6,7 @@
              ngbTooltip="{{ 'Rating' | translate }}">
           <a class="text-white" routerLink="rating">
             <div class="avatar-content">
-              <i [data-feather]="'rating' | iconName" class="font-large-1"></i>
+              <kep-icon name="rating" class="font-medium-5"></kep-icon>
             </div>
           </a>
         </div>
@@ -14,7 +14,7 @@
              ngbTooltip="{{ 'Profile' | translate }}">
           <a class="text-white" routerLink="profile">
             <div class="avatar-content">
-              <i [data-feather]="'user'" class="font-large-1"></i>
+              <kep-icon name="profile" class="font-medium-5"></kep-icon>
             </div>
           </a>
         </div>
@@ -22,7 +22,7 @@
              ngbTooltip="{{ 'MyContests' | translate }}">
           <a class="text-white" routerLink="user-contests">
             <div class="avatar-content">
-              <i [data-feather]="'flag'" class="font-large-1"></i>
+              <kep-icon name="contest" class="font-medium-5"></kep-icon>
             </div>
           </a>
         </div>
