--- a/src/app/modules/courses/course/course-lessons/course-lessons.component.scss
+++ b/src/app/modules/courses/course/course-lessons/course-lessons.component.scss
@@ -30,5 +30,5 @@
 }
 
 ::ng-deep .dark-layout .lessons {
-  background: linear-gradient(to right, #283046, #3d4a6c) !important;
+  background: linear-gradient(to right, #15171c, #3d4a6c) !important;
 }
