--- a/src/app/modules/courses/course/course-reviews/reviews.component.scss
+++ b/src/app/modules/courses/course/course-reviews/reviews.component.scss
@@ -50,7 +50,7 @@
 }
 
 ::ng-deep .dark-layout .reviews {
-  background: linear-gradient(to right, #283046, #3d4a6c) !important;
+  background: linear-gradient(to right, #15171c, #3d4a6c) !important;
 }
 
 .ql-align-center {
