--- a/src/app/modules/home/header-section/header-section.component.html
+++ b/src/app/modules/home/header-section/header-section.component.html
@@ -17,7 +17,7 @@
     <div class="section">
       <div class="avatar p-md-2 p-1 bg-primary badge-glow">
         <div class="avatar-content">
-          <i [data-feather]="'learn' | iconName" class="font-medium-5"></i>
+          <kep-icon name="learn" class="font-medium-4"></kep-icon>
         </div>
       </div>
       <div class="title">
@@ -28,7 +28,7 @@
     <div class="section">
       <div class="avatar p-md-2 p-1 bg-primary badge-glow">
         <div class="avatar-content">
-          <i [data-feather]="'practice' | iconName" class="font-medium-5"></i>
+          <kep-icon name="practice" class="font-medium-4"></kep-icon>
         </div>
       </div>
       <div class="title">
@@ -39,7 +39,7 @@
     <div class="section">
       <div class="avatar p-md-2 p-1 bg-primary badge-glow">
         <div class="avatar-content">
-          <i [data-feather]="'competitions' | iconName" class="font-medium-5"></i>
+          <kep-icon name="competition" class="font-medium-4"></kep-icon>
         </div>
       </div>
       <div class="title">
