--- a/src/app/modules/home/header-section/header-section.component.scss
+++ b/src/app/modules/home/header-section/header-section.component.scss
@@ -1,6 +1,7 @@
 @import 'bootstrap/scss/mixins';
 @import 'bootstrap/scss/functions';
 @import 'scss/base/bootstrap-extended/variables';
+@import 'scss/base/components/variables-dark';
 
 @keyframes gradient {
   0% {
@@ -108,10 +109,10 @@ header {
 
 ::ng-deep .dark-layout {
   header {
-    background: linear-gradient(-45deg, mix(black, $primary, 60), mix(black, $primary, 40), mix(black, $primary, 20), $primary);
+    background: linear-gradient(-45deg, mix(black, $primary, 80), mix(black, $primary, 60), mix(black, $primary, 40), mix(black, $primary, 30));
 
     & > svg {
-      stroke: #161d31 !important;
+      stroke: $theme-dark-body-bg !important;
     }
   }
 }
