[REFACTORING] problem-title

--- a/src/app/modules/problems/pages/problem/problem-description/problem-description.component.html
+++ b/src/app/modules/problems/pages/problem/problem-description/problem-description.component.html
@@ -1,6 +1,6 @@
 <div class="problem-description">
   <div class="problem-title">
-    <h3 class="mb-2">
+    <h3 class="mb-2 text-dark">
       {{ problem.id }}. {{ problem.title }}
     </h3>
   </div>
