--- a/src/app/modules/challenges/pages/challenges/challenges.component.html
+++ b/src/app/modules/challenges/pages/challenges/challenges.component.html
@@ -8,14 +8,14 @@
         <div class="text-center">
           <div [@fadeInUpOnEnter] class="avatar mr-2 avatar-lg">
             <div class="avatar-content" ngbTooltip="{{ 'Challenges' | translate }}">
-              <i class="font-medium-3" data-feather="zap"></i>
+              <kep-icon name="challenge" class="font-medium-3"></kep-icon>
             </div>
           </div>
 
           <a routerLink="profile">
             <div [@fadeInUpOnEnter] class="avatar mr-2 avatar-lg">
               <div class="avatar-content" ngbTooltip="{{ 'Profile' | translate }}">
-                <i class="font-medium-3" data-feather="bar-chart-2"></i>
+                <kep-icon name="profile" class="font-medium-3"></kep-icon>
               </div>
             </div>
           </a>
@@ -23,7 +23,7 @@
           <a routerLink="rating">
             <div [@fadeInUpOnEnter] class="avatar avatar-lg">
               <div class="avatar-content" ngbTooltip="{{ 'Rating' | translate }}">
-                <i class="font-medium-3" data-feather="bar-chart"></i>
+                <kep-icon name="ranking" class="font-medium-3"></kep-icon>
               </div>
             </div>
           </a>
