--- a/src/app/modules/challenges/components/new-challenge-button/new-challenge-button.component.html
+++ b/src/app/modules/challenges/components/new-challenge-button/new-challenge-button.component.html
@@ -1,11 +1,11 @@
 <div class="card btn-new-challenge" ngbTooltip="{{ 'QuickStart' | translate }}">
   <div class="font-large-1 mb-2 mt-2">
-    <i data-feather="clock"></i>
+    <kep-icon name="challenge-time"></kep-icon>
     {{ timeSeconds }}
   </div>
 
   <div class="font-large-1 mb-2">
-    <i data-feather="activity"></i>
+    <kep-icon name="challenge-task"></kep-icon>
     {{ questionsCount }}
   </div>
 </div>
