[REFACTORING] contest-problem | problem-info-card codeGolf visibility

--- a/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
+++ b/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
@@ -75,7 +75,7 @@
 
             <div class="card-body">
               <problem-info-card
-                [hideCodeGolf]="false"
+                [hideCodeGolf]="contest?.type !== 'CodeGolf'"
                 [hideAuthorAndDifficulty]="true"
                 [hideLikes]="true"
                 [problem]="contestProblem?.problem">
