--- a/src/app/modules/contests/components/contest-countdown-card/contest-countdown-card.component.scss
+++ b/src/app/modules/contests/components/contest-countdown-card/contest-countdown-card.component.scss
@@ -1,6 +1,9 @@
 .card {
   background: var(--bg-gradient) !important;
   box-shadow: var(--box-shadow) !important;
+  display: flex;
+  // justify-content: space-around;
+  align-items: center;
 
   h4, h3 {
     color: var(--text-color);
@@ -9,21 +12,16 @@
   .card-footer {
     z-index: 1;
     border-top: 1px solid var(--bg);
+    // border-top: 0;
   }
 
-  .card-bg {
-    left: 0;
+  .contest-logo {
     opacity: 0.1;
     position: absolute;
-    top: 0;
-    width: auto;
-    text-align: center;
-    max-height: 100%;
 
     img {
-      max-width: 100%;
       height: 100%;
-      // width: 100%;
+      width: 100%;
     }
   }
 }
