[ADD] color variables

--- a/src/core/scss/base/bootstrap-extended/_variables.scss
+++ b/src/core/scss/base/bootstrap-extended/_variables.scss
@@ -28,6 +28,10 @@ $warning: $orange !default;
 $light: $gray-50 !default;
 $dark: #071437 !default;
 
+$yellow: rgb(191 200 0 / 94%);
+$blue: #4362eef0;
+$brown: #ba782b;
+
 // Spacing
 //
 // Control the default styling of most Bootstrap elements by modifying these
